--- a/packages/volto-light-theme/src/theme/blocks/_button.scss
+++ b/packages/volto-light-theme/src/theme/blocks/_button.scss
@@ -1,53 +1,42 @@
 .block.__button {
   margin-bottom: 0 !important;
   .button.container {
-    @include narrow-container-width();
+    text-align: unset !important;
+    display: grid;
+    justify-content: var(--block-alignment);
 
+    @include variable-container-width();
     @include vertical-space-button();
   }
 
   p + & {
     .button.container {
-      margin-top: 60px;
+      padding-top: 60px;
       @container (max-width: #{$largest-mobile-screen}) {
-        margin-top: 40px;
+        padding-top: 40px;
       }
     }
   }
 
-  button {
+  .separator + & {
+    .button.container {
+      padding-top: 0;
+      @container (max-width: #{$largest-mobile-screen}) {
+        padding-top: 0;
+      }
+    }
+  }
+
+
+
+  .ui.button {
+    padding: 8px 20px;
     margin: 0;
+    border: 1px solid $black;
+    border-radius: unset;
+    background: none;
+    color: $black;
+  
+    @include body-text-bold();
   }
-}
-
-.block-editor-__button.has--buttonAlign--wide {
-  .button.container {
-    @include default-container-width();
-  }
-}
-
-.block.__button.has--buttonAlign--wide {
-  .button.container {
-    @include default-container-width();
-  }
-}
-
-.block.__button .ui.button {
-  padding: 8px 20px;
-  border: 1px solid $black;
-  border-radius: unset;
-  background: none;
-  color: $black;
-
-  @include body-text-bold();
-}
-
-.block.__button .ui.button:focus,
-.block.__button .ui.button:hover {
-  background-color: $black;
-  color: $white;
-}
-
-.block-editor-__button.has--backgroundColor--grey {
-  background-color: $lightgrey;
 }
